# hama

./: .env.example  .gitignore  .prettierignore  .stylelintrc.json  Makefile  README.md  deepface_server.py  docker-compose.yml  eslint.config.js  index.ts  insightface_server.py  package.json  playwright.config.ts  pnpm-lock.yaml
client/: .env.example  .env.production.example  index.html  package.json  tsconfig.app.tsbuildinfo  vercel.json  vite.config.ts
client/public/: site.webmanifest
client/scripts/: build-icons.mjs
client/src/: App.tsx  main.tsx
client/src/components/: ErrorBlock.module.css  ErrorBlock.tsx  Skeleton.module.css  Skeleton.tsx
client/src/lib/: api.ts  cn.ts  errorHints.ts  poi.ts  qualityReasons.ts  realtime.ts  recognize.ts  resizeImage.ts  sniper.ts  supabase.ts
client/src/pages/: AppShell.module.css  AppShell.tsx  Events.module.css  Events.tsx  Landing.module.css  Landing.tsx  Login.module.css  Login.tsx  Patrol.module.css  Patrol.tsx  PoiDetail.module.css  PoiDetail.tsx  PoiList.module.css  PoiList.tsx  PoiNew.module.css  PoiNew.tsx  Sniper.module.css  Sniper.tsx  SniperDetail.module.css  SniperDetail.tsx  TokenPreview.module.css  (+1 more)
docs/: ARCHITECTURE.md  DECISIONS.md  DEPLOYMENT.md  DESIGN.md  EVALUATION.md  OPERATIONS.md  POLISH-audit.md
e2e/: .env.example  auth.setup.ts
e2e/tests/: auth.spec.ts  poi-list.spec.ts  sniper.spec.ts
python/: .dockerignore  .env.example  .env.production.example  Dockerfile  app.py  pyproject.toml
python/argus_ml/: __init__.py  config.py  face.py  images.py  main.py  quality.py  routes.py  schemas.py  tracking.py
python/scripts/: eval_latency.py  eval_roc.py  eval_tracking_speedup.py  seed_sniper_runs.py
python/tests/: conftest.py  test_images.py  test_quality.py  test_routes.py  test_tracking.py
scripts/: db-push.ts  re-enroll-all.ts
server/: .env.example  .env.production.example  download-models.cjs  drizzle.config.ts  package.json  routes.ts  storage.ts  tsconfig.json  vitest.config.ts
server/routes/: searchImages.ts
server/src/: db.ts  env.ts  index.ts
server/tests/: circuit-breaker.test.ts  cost-guard.test.ts  jwt.test.ts  ml-client.test.ts  picarta.test.ts  reality-defender.test.ts  recognize.test.ts  rls.test.ts  serpapi.test.ts  sniper.test.ts
server/utils/: threshold.ts
shared/: fusion.ts  index.ts  package.json  schema.ts  tsconfig.json  types.ts
supabase/migrations/: 0001_extensions.sql  0002_init_schema.sql  0003_foreign_keys.sql  0004_rls_policies.sql  0005_indexes.sql  0006_buckets.sql  0007_track_id_dedup.sql  0008_cost_guard.sql
(+21 files in other folders)
